[Micls] Lib init

--- a/NeoPixel_F4.ioc
+++ b/NeoPixel_F4.ioc
@@ -9,7 +9,7 @@ Dma.TIM8_CH1.0.MemInc=DMA_MINC_ENABLE
 Dma.TIM8_CH1.0.Mode=DMA_CIRCULAR
 Dma.TIM8_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM8_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM8_CH1.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM8_CH1.0.Priority=DMA_PRIORITY_HIGH
 Dma.TIM8_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -67,6 +67,9 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC6.GPIO_PuPd=GPIO_PULLDOWN
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC6.Signal=S_TIM8_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
