--- a/NeoPixel_F4.ioc
+++ b/NeoPixel_F4.ioc
@@ -1,6 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=TIM8_CH1
-Dma.RequestsNb=1
+Dma.Request1=TIM3_CH4/UP
+Dma.RequestsNb=2
+Dma.TIM3_CH4/UP.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM3_CH4/UP.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM3_CH4/UP.1.Instance=DMA1_Stream2
+Dma.TIM3_CH4/UP.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH4/UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH4/UP.1.Mode=DMA_CIRCULAR
+Dma.TIM3_CH4/UP.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH4/UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH4/UP.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM3_CH4/UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.TIM8_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM8_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM8_CH1.0.Instance=DMA2_Stream2
@@ -19,31 +30,31 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM8
-Mcu.IPNb=7
+Mcu.IP4=TIM3
+Mcu.IP5=TIM8
+Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin11=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PC6
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin5=PB1
+Mcu.Pin6=PC6
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=VP_SYS_VS_Systick
 Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=6.1.0
+MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -63,6 +74,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB1.Signal=S_TIM3_CH4
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -103,7 +118,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM8_Init-TIM8-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -137,28 +152,26 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM1.IPParameters=Period,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision,Prescaler
-TIM1.Period=104
-TIM1.Prescaler=0
-TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM2.IPParameters=Period
-TIM2.Period=104
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation4 CH4,Period,OCMode_PWM-PWM Generation4 CH4
+TIM3.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM1
+TIM3.Period=104
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Period,TIM_MasterOutputTrigger,OCPolarity_1,OCMode_PWM-PWM Generation1 CH1
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Period,TIM_MasterOutputTrigger,OCPolarity_1,OCMode_PWM-PWM Generation1 CH1,OC1Preload_PWM,OCFastMode_PWM-PWM Generation1 CH1
+TIM8.OC1Preload_PWM=ENABLE
+TIM8.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM8.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
 TIM8.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM8.Period=104
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
